<resources>
    <string name="app_name">Coin-panion</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="add_your_friends"><u>Add your friends</u></string>
    <string name="phonenumber_email">PhoneNumber / Email</string>
    <string name="forgot_password"><u>Forgot password? </u></string>
    <string name="login">LOGIN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="submit_credentials">Submit Credentials</string>
    <string name="_0">0</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="confirm_new_password">Confirm new Password</string>
    <string name="enter_the_4_digit_code">Enter the 4-digit Code</string>
    <string name="new_password">New Password</string>
    <string name="phone_number_email">Phone Number / Email</string>
    <string name="name_debt">Name</string>
    <string name="amount_debt">RMx.xx</string>
    <string-array name="sample_duration">
        <item>Day</item>
        <item>Month</item>
        <item>Year</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="coin_panion_login">Coin-Panion\nLogin</string>

    <!-- SIGNUP -->
    <!-- Fragment 1 -->
    <string name="coin_panion_signup">Coin-Panion\nSignup</string>
    <string name="signup_welcome">Welcome to Coin-panion!</string>
    <string name="signup_phone_hint">Let\'s start with your phone number</string>
    <string name="signup_phone_wrong_format">Please enter a valid phone number (Eg:+60179916645)</string>
    <string name="signup_phone_already_exists">Phone number already exists</string>
    <string name="signup_phone_is_available">You\'re good to go!</string>

    <!-- Fragment 2 -->
    <!--
    Strings used:
        - next
        - first_name
        - last_name
        - email
        - email_hint
        - password
        - password_hint
        - email_format_error
        - checking
    -->

    <!-- Fragment 3 -->
    <string name="email_sent_to">A verification code has been sent to your email at <b>%1$s</b>.\nPLease enter the verification code below to verify your email</string>
    <string name="enter_code">Enter your code here</string>
    <string name="wrong_code">Wrong verification code</string>

    <!-- GENERAL -->
    <string name="next">Next</string>
    <string name="checking">Checking</string>
    <string name="verify">Verify</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="email_hint">eg: yourname@domain.com</string>
    <string name="password">Password</string>
    <string name="password_hint">Your password must contain at least eight characters, one number and one special character</string>
    <string name="email_format_error">Please enter a valid email address</string>
    <string name="email_exists">Email already exists, please choose another email</string>
    <string name="good_to_go">You\'re good to go!</string>
    <string name="enter_details">Please enter your details and set your password below</string>
    <string name="enter_email_or_phone">Please enter your email or phone number</string>
    <string name="take_me_to_coinpanion">Take me to Coin-panion!</string>
    <string name="signupUsername">Username</string>
    <string name="what_should_we_call_you">What should we call you</string>
    <string name="bio">Bio</string>
    <string name="tell_something_bout_u">Tell us something about you</string>
    <string name="create_your_profile">Create your profile</string>

    <!--TODO include this into login page lead to privacy policy page only if checkbox is check then the login button can be activated-->
    <string name="terms_text">By using our app, you acknowledge and agree to our terms and privacy policy.
        Our terms and privacy policy can be found at [C:\Users\Huawei\StudioProjects\Coin-panionUICreation\app\src\main\assets\terms_and_privacy.html].</string>
    <string name="expenses_amount">0.00</string>
    <string name="paid_by">Name</string>
    <string-array name="split_expenses">
        <item>Equally</item>
        <item>Unequally</item>
    </string-array>
    <string name="member_name">Name</string>
    <string name="group_description">Group description</string>
    <string name="create_a_group_expenses"> Create a group / expenses </string>
    <string name="group_info">Group Info</string>
</resources>