<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassword">

    <EditText
        android:id="@+id/PTNewPass"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/PTFourthDigit"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/PTFirstDigit"
        app:layout_constraintTop_toBottomOf="@+id/PTFirstDigit" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="168dp"
        android:layout_height="43dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/enter_the_4_digit_code"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout16" />

    <EditText
        android:id="@+id/PTConfirmPass"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/confirm_new_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/PTNewPass"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/PTNewPass"
        app:layout_constraintTop_toBottomOf="@+id/PTNewPass" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/BtnResetPassword"
        android:layout_width="161dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/rounded_edge_button"
        android:backgroundTint="@color/Biru_Muda"
        android:text="@string/reset_password"
        app:layout_constraintEnd_toEndOf="@+id/PTConfirmPass"
        app:layout_constraintStart_toStartOf="@+id/PTConfirmPass"
        app:layout_constraintTop_toBottomOf="@+id/PTConfirmPass" />

    <EditText
        android:id="@+id/PTThirdDigit"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:ems="10"
        android:gravity="bottom|center_horizontal"
        android:hint="@string/_0"
        android:inputType="number"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/PTSecondDigit"
        app:layout_constraintEnd_toStartOf="@+id/PTFourthDigit"
        app:layout_constraintStart_toEndOf="@+id/PTSecondDigit"
        app:layout_constraintTop_toTopOf="@+id/PTSecondDigit"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/PTFourthDigit"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:gravity="bottom|center_horizontal"
        android:hint="@string/_0"
        android:inputType="number"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/PTThirdDigit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.857"
        app:layout_constraintStart_toEndOf="@+id/PTThirdDigit"
        app:layout_constraintTop_toTopOf="@+id/PTThirdDigit"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/PTFirstDigit"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:gravity="bottom|center_horizontal"
        android:hint="@string/_0"
        android:inputType="number"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/PTSecondDigit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="SpeakableTextPresentCheck"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/PTSecondDigit"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:ems="10"
        android:gravity="bottom|center_horizontal"
        android:hint="@string/_0"
        android:inputType="number"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/PTFirstDigit"
        app:layout_constraintEnd_toStartOf="@+id/PTThirdDigit"
        app:layout_constraintStart_toEndOf="@+id/PTFirstDigit"
        app:layout_constraintTop_toTopOf="@+id/PTFirstDigit"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="89dp"
        android:layout_height="90dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordBackImageView"
        app:srcCompat="@mipmap/ic_new_password_foreground" />

    <ImageView
        android:id="@+id/forgotPasswordBackImageView"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_back_foreground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:text="Send verification code"
            android:textColor="@color/black" />

        <ImageButton
            android:id="@+id/IBSubmitResetPassword"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@color/white"
            android:contentDescription="@string/submit_credentials"
            android:contextClickable="false"
            app:srcCompat="@drawable/ic_baseline_send_24"
            tools:visibility="visible" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>