<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.signup.SignupFragment2">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView25"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/last_name"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/textView28"
            app:layout_constraintStart_toEndOf="@+id/textView24"
            app:layout_constraintTop_toBottomOf="@+id/textView28" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:text="@string/first_name"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/textView25"
            app:layout_constraintStart_toStartOf="@+id/textView28"
            app:layout_constraintTop_toBottomOf="@+id/textView28" />

        <Button
            android:id="@+id/signupNextButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="125dp"
            android:text="@string/next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView28"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginTop="116dp"
            android:layout_marginEnd="55dp"
            android:fontFamily="@font/fugaz_one"
            android:text="@string/enter_details"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signupFirstNameLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toStartOf="@+id/signupLastNameLayout"
            app:layout_constraintStart_toStartOf="@+id/textView28"
            app:layout_constraintTop_toBottomOf="@+id/textView24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signupFirstNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signupLastNameLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:overScrollMode="ifContentScrolls"
            app:layout_constraintEnd_toEndOf="@+id/textView28"
            app:layout_constraintStart_toEndOf="@+id/signupFirstNameLayout"
            app:layout_constraintTop_toBottomOf="@+id/textView24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signupLastNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signupEmailLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="@+id/textView28"
            app:layout_constraintStart_toStartOf="@+id/textView28"
            app:layout_constraintTop_toBottomOf="@+id/textView33"
            app:passwordToggleEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signupEmailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_hint"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Email"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/textView28"
            app:layout_constraintTop_toBottomOf="@+id/signupFirstNameLayout" />

        <TextView
            android:id="@+id/textView34"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/password"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/textView28"
            app:layout_constraintTop_toBottomOf="@+id/signupEmailLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signupPasswordLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="@+id/textView28"
            app:layout_constraintStart_toStartOf="@+id/textView28"
            app:layout_constraintTop_toBottomOf="@+id/textView34"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signupPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:password="true"
                android:singleLine="true"
                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>